# market-screener

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md
backend/: .dockerignore  README.md  alembic.ini  pyproject.toml
backend/migrations/: README.md  env.py
backend/migrations/versions/: 20260422_01_baseline.py  20260422_02_base_tables.py  (+9 more)
backend/tests/: test_alert_history_endpoint.py  test_alpha_vantage_client.py  test_altman_z_score.py  test_api_response_cache.py  test_app_smoke.py  test_asset_detail_endpoint.py  test_backfill_validation_job.py  test_breakout_detection_job.py  test_breakout_logic.py  test_coingecko_client.py  test_composite_score_engine.py  test_core_flow_e2e.py  test_crypto_ohlcv_job.py  test_daily_digest_job.py  test_dead_letter_queue.py  test_email_alert_channel.py  test_email_alert_dispatch_job.py  test_equity_ohlcv_job.py  test_event_risk_rules.py  test_event_risk_tagging_job.py  test_finnhub_client.py  test_fmp_fundamentals_client.py  test_freshness_monitor_job.py  test_fundamentals_quality_normalization.py  test_fundamentals_snapshot_job.py  test_fundamentals_snapshot_schema.py  test_growth_metrics.py  test_health_checks.py  test_health_endpoint.py  test_index_metadata_smoke.py  test_indicator_calculations.py  test_indicator_known_fixtures.py  test_indicator_reference_validation.py  test_indicator_snapshot_job.py  test_ingestion_adapter_interfaces.py  test_ingestion_audit_integration.py  test_ingestion_failure_replay_job.py  test_ingestion_retry_workflow.py  test_ingestion_stress_job.py  test_job_audit_trail.py  (+34 more)
(+198 files in other folders)
